syntax = "proto3";

package adminserver.api.v1;

option go_package = "server/admin-server/api/v1;v1";



import "google/api/annotations.proto";
import "validate/validate.proto";

service ModelDeployService {

    // 获取模型部署详情
    rpc GetModelDepInfo(DepInfoRequest) returns (DepInfoReply){
       option (google.api.http) = {
          get: "/v1/deploymanage/modeldeploy/{id}"
       };
    };
    // 获取模型部署列表
    rpc ListDepModel(DepListRequest) returns (DepListReply){
       option (google.api.http) = {
         get: "/v1/deploymanage/modeldeploy"
       };
    };

    //停止模型部署服务
    rpc StopDepModel (StopDepRequest) returns (StopDepReply) {
      option (google.api.http) = {
        post: "/v1/deploymanage/modeldeploy/{id}/stop"
        body: "*"
      };
    };


    // 获取模型部署事件列表
    rpc ListDepEvent (DepEventListRequest) returns (DepEventListReply) {
      option (google.api.http) = {
         get: "/v1/deploymanage/modeldeployevent"
      };
    };

}

message DepInfo {
  string id = 1;
  string userId = 2;
  string workspaceId = 3;
  string name = 4;
  string desc = 5;
  string modelId = 6;
  string modelVersion = 7;
  string modelName = 8;
  string serviceUrl = 9;
  string status = 10;
  int64 completedAt = 11;
  int64 startedAt = 12;
  string modelFrame = 13;
  int64 runSec = 14;
  int64 createdAt = 15;
  int64 updatedAt = 16;
  //用户名
  string userName = 17;
  //工作空间名
  string workspaceName = 18;
}

message ResSpecPrice {
  int64 task = 1;
	int64 price = 2;
}

message DepInfoRequest {
  string id = 1[(validate.rules).string = {min_len: 1}];
}
message DepInfoReply {
  DepInfo depInfo = 1;
}
message DepListRequest {
  // 页码，从1开始，非必填
  int64 pageIndex = 1[(validate.rules).int64 = {gte:1}];
  // 页大小，最小1条，最大100条，非必填
  int64 pageSize = 2[(validate.rules).int64 = {gte:1,lte:100}];
  // 分组依据，非必填
  string sortBy = 3;
  //升序、降序，非必填
  string orderBy = 4[(validate.rules).string = {in: ["", "asc", "desc"]}];
  //大于某个时间创建，非必填
  int64 createdAtGte = 5;
  //小于某个时间创建，非必填
  int64 createdAtLt = 6;
  //状态查询，非必填
  string status = 7;
  //模糊查找字段，可用于name等模糊查找，非必填
  string searchKey = 8;
  //用户ID，非必填
  string userId = 9;
  //工作空间ID，非必填
  string workspaceId = 10;
  //用户名，非必填
  string userNameLike = 11;
}
message DepListReply {
  int64  totalSize = 1;
  repeated DepInfo depInfos = 2;
}

message DepEventListRequest {
  int64 pageIndex = 1[(validate.rules).int64 = {gte:1}];
  int64 pageSize = 2[(validate.rules).int64 = {gte:1,lt:100}];
  //服务Id
  string id = 3[(validate.rules).string = {min_len: 1}];
  //是否总任务事件
  bool isMain = 4;
}

message DepEventListReply {
  //查询结果总数
  int64  totalSize = 1;
  //任务事件
  repeated DepEvent depEvents = 2;
}

message DepEvent{
  //发生时间
  string timestamp = 1;
  //名称
  string name = 2;
  //原因
  string reason = 3;
  //消息
  string message = 4;
}

message  StopDepRequest {
  //任务ID
  string id = 1[(validate.rules).string = {min_len: 1}];
}

message StopDepReply {
  //停止时间
  int64 stoppedAt = 1;
}
