syntax = "proto3";

import "validate/validate.proto";

package baseserver.api.v1;

option go_package = "server/base-server/api/v1;v1";

service ResourceSpecService {
  rpc ListResourceSpec(ListResourceSpecRequest) returns (ResourceSpecList);
  rpc CreateResourceSpec(CreateResourceSpecRequest) returns (CreateResourceSpecReply);
  rpc DeleteResourceSpec(DeleteResourceSpecRequest) returns (DeleteResourceSpecReply);
  rpc GetResourceSpec(GetResourceSpecRequest) returns (GetResourceSpecReply);
  rpc UpdateResourceSpec(UpdateResourceSpecRequest) returns (UpdateResourceSpecReply);
  rpc GetResourceSpecIgnore(GetResourceSpecRequest) returns (GetResourceSpecReply);
}

message ListResourceSpecRequest {
  int32 pageIndex = 1;
  int32 pageSize = 2;
}

message ResourceSpec {
  string id = 1;
  string name = 2;
  double price = 3;
  map<string,string> resourceQuantity = 4;
}

message ResourceSpecList {
  repeated ResourceSpec resourceSpecs = 1;
}

message CreateResourceSpecRequest {
  string name = 1 [(validate.rules).string = {min_len: 1, max_len: 100}];
  double price = 2;
  map<string,string> resourceQuantity = 3;
}

message CreateResourceSpecReply {
  string id = 1;
}

message GetResourceSpecRequest {
  string id = 1;
}

message GetResourceSpecReply {
  ResourceSpec resourceSpec = 1;
}

message DeleteResourceSpecRequest {
  string id = 1;
}

message DeleteResourceSpecReply {
  string id = 1;
}

message UpdateResourceSpecRequest {
  string id = 1;
  string name = 2 [(validate.rules).string = {min_len: 1, max_len: 100}];
  double price = 3;
  map<string,string> resourceQuantity = 4;
}

message UpdateResourceSpecReply {
  string id = 1;
}